--- a/templates/aurora_mysql.template.yaml
+++ b/templates/aurora_mysql.template.yaml
@@ -596,9 +596,6 @@ Resources:
               StringEquals:
                 'kms:CallerAccount': !Ref 'AWS::AccountId'
                 'kms:ViaService': !Sub 'rds.${AWS::Region}.amazonaws.com'
-      Tags:
-        - Key: Name
-          Value: !Ref AWS::StackName
   EncryptionKeyAlias:
     Type: AWS::KMS::Alias
     Properties:
@@ -954,7 +951,6 @@ Resources:
     Condition: DBPasswordRotation
     Type: AWS::SecretsManager::Secret
     Properties:
-      Name: !Sub 'aurora-mysql-secret-${AWS::AccountId}-${AWS::Region}'
       Description: !Join ['', ['Aurora MySQL Master User Secret ', 'for CloudFormation Stack ', !Ref 'AWS::StackName']]
       GenerateSecretString:
         SecretStringTemplate: !Sub '{"username": "${DBMasterUsername}"}'
@@ -983,7 +979,6 @@ Resources:
     DependsOn: CopyZips
     Type: AWS::Lambda::Function
     Properties:
-      FunctionName: !Sub 'SecretsManager-SecretRotation-${AWS::StackName}'
       Runtime: python2.7
       Role: !GetAtt LambdaExecutionRole.Arn
       Handler: lambda_function.lambda_handler
@@ -1019,6 +1014,40 @@ Resources:
       Prefix: !Ref 'QSS3KeyPrefix'
       Objects:
         - functions/packages/SSMRotateLambda/lambda.zip
+  LambdaExecutionRolePolicy:
+    Condition: DBPasswordRotation
+    Type: AWS::IAM::Policy
+    Properties:
+      Roles:
+        - !Ref LambdaExecutionRole
+      PolicyName: lambda_policy
+      PolicyDocument:
+        Version: '2012-10-17'
+        Statement:
+          - Effect: "Allow"
+            Action:
+              - "secretsmanager:DescribeSecret"
+              - "secretsmanager:GetSecretValue"
+              - "secretsmanager:PutSecretValue"
+              - "secretsmanager:UpdateSecretVersionStage"
+            Resource: !Sub 'arn:${AWS::Partition}:secretsmanager:${AWS::Region}:${AWS::AccountId}:secret:*'
+            Condition:
+              StringEquals:
+                secretsmanager:resource/AllowRotationLambdaArn: !GetAtt 'RDSRotationLambda.Arn'
+          - Effect: "Allow"
+            Action:
+              - "secretsmanager:GetRandomPassword"
+            Resource: "*"
+          - Effect: Allow
+            Action:
+              - logs:CreateLogGroup
+              - logs:CreateLogStream
+              - logs:PutLogEvents
+            Resource: arn:aws:logs:*:*:*
+          - Effect: Allow
+            Action:
+              - cloudformation:DescribeStacks
+            Resource: '*'
   LambdaExecutionRole:
     Condition: DBPasswordRotation
     Type: AWS::IAM::Role
@@ -1037,41 +1066,12 @@ Resources:
         - arn:aws:iam::aws:policy/service-role/AWSLambdaVPCAccessExecutionRole
         - arn:aws:iam::aws:policy/SecretsManagerReadWrite
       Path: /
-      Policies:
-        - PolicyName: lambda_policy
-          PolicyDocument:
-            Version: '2012-10-17'
-            Statement:
-              - Effect: "Allow"
-                Action:
-                  - "secretsmanager:DescribeSecret"
-                  - "secretsmanager:GetSecretValue"
-                  - "secretsmanager:PutSecretValue"
-                  - "secretsmanager:UpdateSecretVersionStage"
-                Resource: !Sub 'arn:${AWS::Partition}:secretsmanager:${AWS::Region}:${AWS::AccountId}:secret:*'
-                Condition:
-                  StringEquals:
-                    secretsmanager:resource/AllowRotationLambdaArn: !Sub 'arn:${AWS::Partition}:lambda:${AWS::Region}:${AWS::AccountId}:function:SecretsManager-SecretRotation-${AWS::StackName}'
-              - Effect: "Allow"
-                Action:
-                  - "secretsmanager:GetRandomPassword"
-                Resource: "*"
-              - Effect: Allow
-                Action:
-                  - logs:CreateLogGroup
-                  - logs:CreateLogStream
-                  - logs:PutLogEvents
-                Resource: arn:aws:logs:*:*:*
-              - Effect: Allow
-                Action:
-                  - cloudformation:DescribeStacks
-                Resource: '*'
   LambdaInvokePermission:
     Type: AWS::Lambda::Permission
     Condition: DBPasswordRotation
     DependsOn: RDSRotationLambda
     Properties:
-      FunctionName: !Sub 'SecretsManager-SecretRotation-${AWS::StackName}'
+      FunctionName: !GetAtt RDSRotationLambda.Arn
       Action: 'lambda:InvokeFunction'
       Principal: secretsmanager.amazonaws.com
   CopyZipsFunction:
