--- a/templates/aurora_mysql.template.yaml
+++ b/templates/aurora_mysql.template.yaml
@@ -243,8 +243,6 @@ Parameters:
     MinValue: 1150
     MaxValue: 65535
   DBName:
-    AllowedPattern: "[a-zA-Z][a-zA-Z0-9]*"
-    ConstraintDescription: "Must contain 5 to 64 alphanumeric characters"
     Default: 'AuroraMySQLDB'
     Description: "Name of the Amazon Aurora database."
     MaxLength: "63"
@@ -596,6 +594,9 @@ Resources:
               StringEquals:
                 'kms:CallerAccount': !Ref 'AWS::AccountId'
                 'kms:ViaService': !Sub 'rds.${AWS::Region}.amazonaws.com'
+      Tags:
+        - Key: Name
+          Value: !Ref AWS::StackName
   EncryptionKeyAlias:
     Type: AWS::KMS::Alias
     Properties:
@@ -1014,40 +1015,6 @@ Resources:
       Prefix: !Ref 'QSS3KeyPrefix'
       Objects:
         - functions/packages/SSMRotateLambda/lambda.zip
-  LambdaExecutionRolePolicy:
-    Condition: DBPasswordRotation
-    Type: AWS::IAM::Policy
-    Properties:
-      Roles:
-        - !Ref LambdaExecutionRole
-      PolicyName: lambda_policy
-      PolicyDocument:
-        Version: '2012-10-17'
-        Statement:
-          - Effect: "Allow"
-            Action:
-              - "secretsmanager:DescribeSecret"
-              - "secretsmanager:GetSecretValue"
-              - "secretsmanager:PutSecretValue"
-              - "secretsmanager:UpdateSecretVersionStage"
-            Resource: !Sub 'arn:${AWS::Partition}:secretsmanager:${AWS::Region}:${AWS::AccountId}:secret:*'
-            Condition:
-              StringEquals:
-                secretsmanager:resource/AllowRotationLambdaArn: !GetAtt 'RDSRotationLambda.Arn'
-          - Effect: "Allow"
-            Action:
-              - "secretsmanager:GetRandomPassword"
-            Resource: "*"
-          - Effect: Allow
-            Action:
-              - logs:CreateLogGroup
-              - logs:CreateLogStream
-              - logs:PutLogEvents
-            Resource: arn:aws:logs:*:*:*
-          - Effect: Allow
-            Action:
-              - cloudformation:DescribeStacks
-            Resource: '*'
   LambdaExecutionRole:
     Condition: DBPasswordRotation
     Type: AWS::IAM::Role
@@ -1066,6 +1033,35 @@ Resources:
         - arn:aws:iam::aws:policy/service-role/AWSLambdaVPCAccessExecutionRole
         - arn:aws:iam::aws:policy/SecretsManagerReadWrite
       Path: /
+      Policies:
+        - PolicyName: lambda_policy
+          PolicyDocument:
+            Version: '2012-10-17'
+            Statement:
+              - Effect: "Allow"
+                Action:
+                  - "secretsmanager:DescribeSecret"
+                  - "secretsmanager:GetSecretValue"
+                  - "secretsmanager:PutSecretValue"
+                  - "secretsmanager:UpdateSecretVersionStage"
+                Resource: !Sub 'arn:${AWS::Partition}:secretsmanager:${AWS::Region}:${AWS::AccountId}:secret:*'
+                Condition:
+                  StringEquals:
+                    secretsmanager:resource/AllowRotationLambdaArn: !Sub 'arn:${AWS::Partition}:lambda:${AWS::Region}:${AWS::AccountId}:function:SecretsManager-SecretRotation-${AWS::StackName}'
+              - Effect: "Allow"
+                Action:
+                  - "secretsmanager:GetRandomPassword"
+                Resource: "*"
+              - Effect: Allow
+                Action:
+                  - logs:CreateLogGroup
+                  - logs:CreateLogStream
+                  - logs:PutLogEvents
+                Resource: arn:aws:logs:*:*:*
+              - Effect: Allow
+                Action:
+                  - cloudformation:DescribeStacks
+                Resource: '*'
   LambdaInvokePermission:
     Type: AWS::Lambda::Permission
     Condition: DBPasswordRotation
